fix sorting on mobile view

--- a/static/defro/css/style.css
+++ b/static/defro/css/style.css
@@ -173,7 +173,7 @@ ul{
 .basket .dropdown{
 	display: inline-block;
 	vertical-align: middle;
-	z-index: 901;
+	z-index: 800;
 }
 .basket .btn-default{
 	color: #565555;
@@ -1763,6 +1763,10 @@ a.choose_kotel:hover{
 .custom_select select:active, .custom_select select:focus {
 	background: url("../img/catalog/selectbox_active.png") no-repeat center right 2px;
 	outline: none !important;
+}
+.modal_mobile_sort .custom_select {
+	display: block;
+	width: 100%;
 }
 select::-ms-expand {
 	display: none;
@@ -5373,4 +5377,18 @@ div.contacts a.life {
 }
 .rights p {
 	width: 250px;
+}
+#mobile_sort_submit {
+	background: #ed1b24;
+	height: 42px;
+	padding: 12px 0;
+	width: 110px;
+	display: inline-block;
+	vertical-align: top;
+	text-decoration: none;
+	border: 1px solid #ed1b24;
+	font-size: 14px;
+	text-align: center;
+	margin: 15px 74px;
+	color: #fff;
 }
